Version 1.0.1
=============

- Added antialiasing support.
- Fixed some issues with shimmying between diagonal ledges and walls.
- Fixed rope transparency.
- Fixed incorrect polerope grabbing.
- Fixed camera behaviour with pushable blocks.
- Fixed minecart unduck on inclines.
- Fixed quadbike dismount with jump key and allow to shoot big gun with action key.
- Prevent title music audio from starting in a random place.
- Update harpoon speed on room change.

Version 1.0
===========

First beta release.